--- a/advent-of-code.cabal
+++ b/advent-of-code.cabal
@@ -35,6 +35,7 @@ library
                     , AoC.Day04
                     , AoC.Day05
                     , AoC.Day06
+                    , AoC.Day07
     hs-source-dirs:   src
 
 executable advent-of-code
@@ -56,6 +57,7 @@ test-suite advent-of-code-test
                     , AoC.Day04Spec
                     , AoC.Day05Spec
                     , AoC.Day06Spec
+                    , AoC.Day07Spec
     type:             exitcode-stdio-1.0
     hs-source-dirs:   test
     main-is:          Spec.hs
