--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,7 +7,7 @@
 			"adjustBash": true,
 			"ghcVersion": "9.4.2",
 			"cabalVersion": "3.8.1.0",
-			"globalPackages": "cabal-install hlint hspec-discover ghcid"
+			"globalPackages": "haskell-language-server cabal-install hlint hspec-discover ghcid"
 		}
 	},
 	"customizations": {
